# InferLab

./: .gitignore  README.md  pyproject.toml
inferlab/: smoke-test.py
inferlab/attention/: from_scratch_layer.py  verify_layer.py
inferlab/bench/: __init__.py  runner.py
inferlab/engines/: base.py  from_scratch.py  kv_cache.py  naive.py
inferlab/eval/: prompts.py  quality.py
inferlab/metrics/: latency.py  memory.py  throughput.py
inferlab/results/: week1_sweep_v2.csv
results/: week1_sweep.csv
tests/: test_engines.py
